# cshep2023

./: .gitignore  README.md
code/: CMakeLists.txt  algo.cpp  algo_functions.cpp  algo_functions_solution.cpp  algo_solution.cpp  aos.cpp  aos_impr.cpp  benchmark.hpp  cold.cpp  false_sharing.cpp  false_sharing_solution.cpp  pack.cpp  parallel_for.cpp  parallel_for_it.cpp  parallel_reduce.cpp  parallel_reduce_explicit.cpp  privatization.cpp  privatization_solution.cpp  race.cpp  race_solution.cpp  sizeof.cpp  soa.cpp
project/: CMakeLists.txt  README.md  main.cpp
tex/: cshep2023.tex  frontmatter.tex  introduction.tex
